objects/Contractor_Information__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Monthly_Rate__c *  Hours_Worked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractor_Name__c</fullName>
        <label>Contractor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Component__c</fullName>
        <label>Monthly Component</label>
        <referenceTo>monthly_Components__c</referenceTo>
        <relationshipLabel>Contractor Information</relationshipLabel>
        <relationshipName>Contractor_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Monthly_Rate__c</fullName>
        <label>Monthly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Contractor Information</label>
    <nameField>
        <displayFormat>Con Inf - {0000000}</displayFormat>
        <label>Contractor Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractor Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>